--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Premier Site</title>
-    +<link rel="stylesheet" href="style.css">
-
+    <title>Contact</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <nav>
     <a href="index.html">Accueil</a>
@@ -14,7 +13,11 @@
 </nav>
 
 <body>
-    <h1>Bienvenue sur INNOVATION AI !</h1>
-    <p>Ceci est ma première page web.</p>
+    <header>
+        <h1>Contactez-moi</h1>
+    </header>
+    <main>
+        <p>Envoyez-moi un message à : <strong>mon-email@example.com</strong></p>
+    </main>
 </body>
 </html>
