--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </nav>
 
 <body>
-    <h1>Bienvenue sur AI INNOVATION !</h1>
+    <h1>Bienvenue sur AI INNOVA !</h1>
     <p>Ceci est ma première page web.</p>
 </body>
 </html>
