--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <h1>Contactez-moi</h1>
     </header>
     <main>
-        <p>Envoyez-moi un message à : <strong>mon-email@example.com</strong></p>
+        <p>Envoyez-moi un message à : <strong>christianraphael48@outlook.com</strong> ou <strong>christianraphael48@gmail.com</strong></p>
     </main>
 </body>
 </html>
